<resources>
    <string name="app_name">Alt Bubble Beta</string>
    <string name="action_settings">Settings</string>
    <string name="main_fragment_default_text">Audio clips</string>

    <string name="transition_interaction_cell">interactioncelltransition</string>

    <string name="interaction_detail_title">Interaction Detail</string>
    <string name="interaction_detail_dummy">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <string name="drawer_fragment_text_title">Help!</string>
    <string name="drawer_fragment_text_subtitle">Information if you get stuck</string>

    <string name="drawer_fragment_text_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
</resources>
