<?xml version="1.0" encoding="utf-8"?>
<com.simonkenny.altbubblebeta.ScrimInsetsFrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="320dp"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:id="@+id/navdrawer"
    android:background="#80FFFFFF"
    android:fitsSystemWindows="true"
    app:insetForeground="#4000"
    >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity$DrawerFragment"
        >

        <!-- HEADER -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary"
            android:paddingTop="16dp"
            android:paddingBottom="32dp"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/text_project"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:text="@string/drawer_fragment_text_title"
                android:paddingLeft="16dp"
                android:paddingBottom="8dp"
                />

            <TextView
                android:id="@+id/text_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:text="@string/drawer_fragment_text_subtitle"
                android:paddingLeft="16dp"
                />

        </LinearLayout>

        <!-- BODY -->

        <TextView
            android:id="@+id/text_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:singleLine="false"
            android:text="@string/drawer_fragment_text_content"
            android:paddingTop="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="8dp"
            />

        <!-- TODO : add more layout -->



    </LinearLayout>
</com.simonkenny.altbubblebeta.ScrimInsetsFrameLayout>